Backend refactoring: creating refreshToken logic, fixing student exam entries, new methods for finding users, and creating UserServiceClient in exam-service